# Software-Renderer-CPP

./: CMakeLists.txt  README.md  main.cpp
headers/: camera.h  device.h  raster.h  timer.h
sources/: camera.cpp  device.cpp  raster.cpp  timer.cpp
